<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hiking It</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="b_addmark">Hello world!</string>
    <string name="no_tracks">No tracks nearby found</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_delete">Delete Track</string>
    <string name="menu_edit">Edit Track</string>
    <string name="track_summary">Summary</string>
    <string name="track_description">Delete Track</string>
    <string name="track_edit_title">Title</string>
    <string name="track_edit_summary">Summary</string>
    <string name="track_edit_confirm">Confirm</string>
    <string name="tDifficulty">Difficulty :</string>
    <string name="tNbCoords">Coord. number :</string>
    <string name="tDuration">Duration (min):</string>
    <string name="track_edit_yourcoords">Your coordinates :</string>
    <string name="tPosition">Vecteur :</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_my_tracks">MyTracksActivity</string>
    <string name="db_title">title</string>
    <string name="db_summary">summary</string>
    <string name="db_difficulty">difficulty</string>
    <string name="db_coords">coords</string>
    <string name="db_startX">startX</string>
    <string name="db_startY">startY</string>
    <string name="db_score">score</string>
    <string name="db_reputation">reputation</string>
    <string name="db_pics">pics</string>
    <string name="db_duration">0></string>
    <string name="db_nbcoords">0></string>
    <string name="db_flags">0></string>
    <string name="db_counter">0</string>

</resources>