<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >

        <EditText
            android:id="@+id/track_edit_title"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:hint="@string/track_edit_title"
            android:imeOptions="actionNext" >
        </EditText>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/maps_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip" >

        <TextView
            android:id="@+id/tvDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dip"
            android:gravity="center"
            android:text="@string/tDifficulty"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/difficulty"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_weight="0.91"
            android:entries="@array/difficulties" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/coordlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip" >

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dip"
            android:gravity="center"
            android:text="@string/tDuration"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tdDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="0.20" />

    </LinearLayout>

    <EditText
        android:id="@+id/tdSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/track_edit_summary"
        android:imeOptions="actionNext" >

        <requestFocus />
    </EditText>

</LinearLayout>